--- a/locales/lo/translation.json
+++ b/locales/lo/translation.json
@@ -1,6 +1,6 @@
 {
     "advanced": {
-        "flushdb": "ລົບລ້າງບ່ອນໄຟລ໌"
+        "flushdb": "ລົບລ້າງບ່ອນເກັບຂໍ້ມູນ"
     },
     "alert": {
         "addtohomescreen": {
@@ -8,13 +8,7 @@
                 "msg": "ເພື່ອເພີ່ມໃສ່ຫນ້າຫລັກຂອງທ່ານ, ຄລິກສັນຍາລັກບຣາວເຊີ້ __image1__ ແລະເລືອກ: 'Add to Home screen'."
             },
             "androidfirefox": {
-                "msg": [
-                    "ເພື່ອເອົາຟອມໃສ່ຫນ້າຫລັກຂອງທ່ານ:",
-                    "1. ເພີ່ມຫນ້ານີ້ໃສ່ Firefox ບູກມາກທ່ານໂດຍການຄລິກໃສ່ສັນຍາລັກຕັ້ງຄ່າ __image1__ ແລະ ສັນຍາລັກດາວ __image2__.",
-                    "2. ເປີດບູກມາກຂອງທ່ານໂດຍການເປີດຫນ້າໃຫມ່ແລະຄລິກແຖບບູກມາກ",
-                    "3. ຄລິກແລະຈຶ້ງໄວ້ຈົນມີເມນູເດັ້ງຂຶ້ນມາ",
-                    "ເລືອກ 'ເພີ່ມໃສ່ຫນ້າຫລັກ'."
-                ]
+                "msg": "ເພື່ອເກັບຟອມໃນຫນ້າຈໍຫລັກຂອງທ່ານ, ໃຫ້ກົດ Address bar ຄ້າງໄວ່້ດົນໆ ແລະ ເລືອກ  'Add to Home Screen'."
             },
             "heading": "ເພີ່ມໃສ່ຫນ້າຫລັກ",
             "iossafari": {
@@ -25,12 +19,15 @@
             "heading": "ແອັບໄດ້ອັບເດດແລ້ວ",
             "msg": "ເວີຊັ້ນໃຫມ່ຂອງແອັບໂຕນີ້ໄດ້ດາວໂຫລດແລ້ວ. ກະລຸນາເລີ່ມເປີດຫນ້ານີ້ໃຫມ່ເພື່ອໃຊ້ໂຕໃຫມ່."
         },
+        "closing": {
+            "heading": "ກຳລັງປິດ..."
+        },
         "default": {
             "button": "ປິດ",
             "heading": "ແຈ້ງເຕືອນ"
         },
         "export": {
-            "alternativequestion": "ການດາວໂຫລດທາງເລືອກອື່ນ - ອອນໄລນ໌",
+            "alternativequestion": "ທາງເລືອກໃນການດາວໂຫລດ - ອອນໄລນ໌",
             "error": {
                 "filecreatedmsg": "ຢ່າງໃດກໍ່ຕາມ, ໄຟລສຳລັບສົ່ງອອກທີ່ຍັງບໍ່ສຳເລັດຍັງສ້າງຢູ່",
                 "heading": "ຂໍ້ມູນຜິດພາດສົ່ງອອກ",
@@ -46,9 +43,12 @@
             "heading": "ແບບ​ຟອມອັບເດດແລ້ວ​!",
             "msg": "ເວີ້ຊັ້ນໃຫມ່ຂອງຟອມໂຕນີ້ໄດ້ໂຫລດແລ້ວ. ກະລຸນາປິດແລະເປີດໃຫມ່"
         },
+        "gotonotfound": {
+            "msg": "ລົ້້ມເຫລວໃນການເລືອກຄຳຖາມ \"__path__\" ໃນຟອມ. ການອ້າງອີງສຳລັບຄຳຖາມນີ້ຖືກຕ້ອງບໍ່?"
+        },
         "loaderror": {
             "editadvice": "ແນະນຳວ່າບໍ່ຄວນແກ້ໄຂຂໍ້ມູນນີ້ເທື່ອຈົນກ່ວາບັນຫາຈະຖືກແກ້ໄຂ",
-            "entryadvice": "ຶແນະນຳວ່າບໍ່ຄວນໃຊ້ຟອມນີ້ເທື່ອຈົນກ່ວາບັນຫາຈະຖືກແກ້ໄຂ",
+            "entryadvice": "ແນະນຳວ່າບໍ່ຄວນໃຊ້ຟອມນີ້ເທື່ອຈົນກ່ວາບັນຫາຈະຖືກແກ້ໄຂ",
             "heading": "ການໂຫລດມີຂໍ້ຜິດພາດ",
             "msg1": "ຂໍ້ມູນຜິດພາດໃນເວລາການໂຫລດຟອມ",
             "msg2": "ກະລຸນາຕິດຕໍ່ __emailLink__ ກັບລິ້ງໃນຫນ້າເວັບນີ້ແລະຂໍ້ຄວາມຜິດພາດລຸ່ມນີ້:",
@@ -105,6 +105,11 @@
             "msg": "ຂໍ້ມູນຂອງທ່ານໄດ້ຖືກສົ່ງແລ້ວ!",
             "redirectmsg": "ທ່ານຈະຖືກສົ່ງໄປຫນ້າໃຫມ່ດຽວນີ້"
         },
+        "thanks": {
+            "heading": "ຂໍຂອບໃຈໃນການມີສ່ວນຮ່ວມ",
+            "msg": "ທ່ານສາມາດປິດຫນ້າຕ່າງນີ້ໄດ້ດຽວນີ້",
+            "msgTaken": "ທ່ານໄດ້ປ້ອນຂໍ້ມູນໃສ່ຟອມນີ້ສຳເລັດແລ້ວ"
+        },
         "validationerror": {
             "msg": "ຟອມມີຂໍ້ຜີດພາດ. ກະລຸນາໃຫ້ເບິ່ງສັນຍາລັກແຈ້ງເຕືອນສີແດງ"
         },
@@ -122,7 +127,7 @@
             "heading": "ພົບເຫັນຂໍ້ມູນທີ່ບໍ່ໄດ້ບັນທຶກ",
             "msg": "ໄດ້ພົບເຫັນຂໍ້ມູນທີ່ຍັງບໍ່ໄດ້ບັນທຶກເທື່ອ. ທ່ານຢາກໃຊ້ຂໍ້ມູນນີ້ບໍ່ຫລືຖິ້ມມັນ?",
             "negButton": "ຍົກເລີກ",
-            "posButton": "ໂຫລດຂໍ້ມູນ"
+            "posButton": "ໂຫລດການບັນທຶກຂໍ້ມູນ"
         },
         "default": {
             "heading": "ທ່ານແນ່ໃຈແລ້ວບໍ່?",
@@ -148,7 +153,7 @@
         "login": {
             "heading": "ຕ້ອງເຂົ້າສູ່ລະບົບ",
             "msg": [
-                "ໃນການສົ່ງຂໍ້ມູນທີ່ຢູ່ໃນຄິວ, ທ່ານຄວນເຂົ້າສູ່ລະບົບ. ຖ້າທ່ານຢາກເຮັດຕອນນີ້, ຈະຖືກສົ່ງໄປຫນ້າອືານແລະຈະເສຍຂໍ້ມູນທີ່ຍັງບໍ່ໄດ້ບັນທຶດເທື່ອ",
+                "ເພື່ອອັບໂລຫດຂໍ້ມູນທີ່ຢູ່ໃນຄິວ, ທ່ານຄວນເຂົ້າສູ່ລະບົບກ່ອນ. ຖ້າທ່ານຢາກເຮັດຕອນນີ້, ທ່ານຈະຖືກສົ່ງໄປຫນ້າອື່ນແລະຈະເສຍຂໍ້ມູນທີ່ຍັງບໍ່ໄດ້ບັນທຶດເທື່ອ",
                 "ທ່ານຢາກເຂົ້າສູ່ລະບົບຕອນນີ້ບໍ່?"
             ],
             "negButton": "ເອົາໄວ້ກ່ອນ",
@@ -177,12 +182,17 @@
         }
     },
     "constraint": {
-        "invalid": "ຄ່າບໍ່ບໍ່ຖືກຕ້ອງ",
+        "invalid": "ຄ່າບໍ່ຖືກຕ້ອງ",
         "required": "ຊ່ອງວ່າງນີ້ແມ່ນຕ້ອງໃສ່"
     },
     "contact": {
-        "admin": "ກະລຸນາຕິດຕໍ່ຜູ້ເບິ່ງແຍງເວັບນີ້",
+        "admin": "ກະລຸນາຕິດຕໍ່ຜູ້ເບິ່ງແຍງລະບົບ",
         "support": "ກະລຸນາຕິດຕໍ່ __supportEmail__"
+    },
+    "drawwidget": {
+        "annotation": "ໄຟລ໌ແລະການແຕ້ມ",
+        "drawing": "ແຕ້ມຮູບ",
+        "signature": "ລາຍເຊັນ"
     },
     "enketo": {
         "power": "ສະ​ຫນັບ​ສະ​ຫນູນ​ໂດຍ"
@@ -193,9 +203,12 @@
         "econnrefused": "ບໍ່ສາມາດເຊື່ອຕໍ່ກັບເຊີເວີ້",
         "encryptionnotsupported": "ໂຟມໂຕນີ້ຕ້ອງການລະຫັດລັບຂອງຂໍ້ມູນ. ເຖິງຢ່າງໃດກໍ່ຕາມຍັງບໍ່ສະຫນັບສະຫນູນກັນເທື່ອ. ພວກເຮົາແນະນຳໃຊ້ KeptData Collect ສຳລັບການເກັບຂໍ້ມູນຂອງຟອມນີ້",
         "instancenotfound": "ຂໍ້ມູນບໍພົບເຫັນ. ອາດໄດ້ໝົດອາຍຸໄປແລ້ວ",
-        "invalidediturl": "ີURL ບໍ່ສາມາດແກ້ໄຂໄດ້",
+        "invalidediturl": "URL ບໍ່ສາມາດແກ້ໄຂໄດ້",
         "loadfailed": "ຜິດພາດໃນການໂຫລດ __resource__",
-        "notfoundinformlist": "ຟອມທີ່ມີ ID __formId__ ບໍ່ສາມາດພົບເຫັນ",
+        "notfoundinformlist": [
+            "ຂໍອະໄພ! ຟອມນີ້ບໍ່ມີແລ້ວ (ບໍ່ພົບເຫັນໃນລະບົບ). ອາດຈະເປັນຍ້ອນເຈົ້າຂອງຟອມໄດ້ລົບອອກຫລືປິດການໃຊ້ງານ. ກະລຸນາຕິດຕໍ່ເຈົ້າຂອງຟອມເພື່ອສອບຖາມຂໍ້ມູນເພີ່ມເຕີມ.",
+            "ຂໍ້ມູນຜິດພາດ: ຟອມ ID __formId__ ບໍ່ພົບເຫັນໃນ /formList."
+        ],
         "pagenotfound": "ຫນ້າເວັບບໍ່ພົບເຫັນ",
         "surveyidnotactive": "ຟອມທີ່ມີ ID ນີ້ບໍ່ສາມາດໃຊ້ງານໄດ້",
         "surveyidnotfound": "ຟອມທີ່ມີ ID ນີ້ບໍ່ພົບເຫັນ",
@@ -203,6 +216,14 @@
     },
     "feedback": {
         "header": "ຂໍ້ມູນ"
+    },
+    "filepicker": {
+        "file": "ໄຟລ໌",
+        "notFound": "ໄຟລ໌ __existing__ ບໍ່ພົບເຫັນ (ບໍ່ຄວນແກ້ໄຂຖ້າໄດ້ອັບໂລຫດຂຶ້ນໄປແລ້ວແລະຕ້ອງການຮັກສາມັນໄວ້)",
+        "placeholder": "ຄລິກບ່ອນນີ້ເພື່ອອັບໂຫລດ (< __maxSize__)",
+        "resetWarning": " __item__ ຈະຖືກລົບອອກ. ທ່ານແນ່ໃຈຫລືບໍ່?",
+        "toolargeerror": "ໄຟລ໌ໃຫຍ່ໂພດ (> __maxSize__)",
+        "waitingForPermissions": "ກຳລັງລໍຖ້າການອານຸຍາດຂອງຍູເຊີ"
     },
     "form": {
         "chooseLanguage": "ເລືອກພາສາ",
@@ -216,6 +237,9 @@
         "required": "ຕ້ອງການ"
     },
     "formfooter": {
+        "complete": {
+            "btn": "ສຳເລັດ"
+        },
         "savedraft": {
             "btn": "ບັນທຶກຮ່າງ",
             "label": "ເປັນທຶກເປັນຮ່າງ"
@@ -236,11 +260,15 @@
         "latitude": "ລາຕິທູດ (x.y °)",
         "longitude": "ລອງຕິທູດ (x.y °)",
         "points": "ຄະແນນ",
+        "removePoint": "ຂໍ້ມູນ geopoint ຈະຖືກລົບອອກຈາກລາຍການແລະບໍ່ສາມາດກູ້ກັບມາໄດ້ອີກ. ທ່ານແນ່ໃຈຫລືບໍ່?",
         "searchPlaceholder": "ຄົ້ນຫາສະຖານທີ່ຫລືທີ່ຢູ່"
     },
     "here": "ບ່ອນນີ້",
     "home": {
         "msg": "__appTitle__ ກຳລັງທຳງານຢູ່! ກະລຸນາເຂົ້າໃຂ້ ຟອມ KeptData ຈາກເຊີເວີ້ຂອງທ່ານ"
+    },
+    "imagemap": {
+        "svgNotFound": "ຮູບ SVG ບໍ່ພົບເຫັນ"
     },
     "langs": {
         "ar": "ອາຣາບີກ",
@@ -250,6 +278,7 @@
         "en": "ອັງກິດ",
         "es": "ສະເປນ",
         "fa": "ເປີຊຽນ",
+        "fi": "ຟິນນິສ",
         "fr": "ຝຣັ່ງເສດ",
         "he": "ເຮບຣີວ",
         "hi": "ຮິນດີ",
@@ -258,9 +287,12 @@
         "lo": "ລາວ",
         "nl": "ດັດ",
         "no": "ນໍເວ",
+        "pl": "ໂພລິສ",
+        "pt": "ໂປຕູເກດ",
         "ro": "ໂຮມາເນຍ",
         "sk": "ສະໂລວັກ",
         "supported": "ພາສາທີ່ສາມາດໃຊໄດ້:",
+        "sv": "ສະວີເດັນ",
         "sw": "ສະວາຮີລີ",
         "th": "ໄທ",
         "vi": "ຫວຽດນາມ",
@@ -293,6 +325,10 @@
             "username": "ຍູເຊີເນມ"
         }
     },
+    "rankwidget": {
+        "clickstart": "ຄລິກເພື່ອເລີ່ມ",
+        "tapstart": "ຄລິກເພື່ອເລີ່ມ"
+    },
     "record-list": {
         "export": "ສົ່ງໄຟລ໌ອອກ",
         "msg1": "ຂໍ້ມູນໄດ້ຖືກເກັບໄວ້ໃນບຣາວເຊີ້ຈົນກ່ວາຈະໄດ້ຖືກອັບໂຫລດຂຶ້ນໄປ (ເຖິງແມ່ນວ່າທ່ານຈະປິດອຸປະກອນຫລືຂາດການເຊື່ອມຕໍ່ຜ່ານອີນເຕີເນັດ)",
@@ -321,9 +357,11 @@
         "http401": "ການຢືນຍັນຕົວຕົນມີບັນຫາກັບເຊີເວີ້",
         "http403": "ບໍ່ໄດ້ຮັບອະນຸຍາດສົ່ງຂໍ້ມູນໄປຫາເຊີເວີ້",
         "http404": "ບໍລິການການສົ່ງຂໍ້ມູນໃນເຊີເວີ້ບໍ່ພົບເຫັນ",
+        "http408": "Data server timed out.",
         "http413": "ຂໍ້ມູນມີຂະຫນາດໃຫຍ່ຫລາຍ",
         "http4xx": "ບັນຫາທີ່ບໍ່ຮູ້ຈັກໃນການສົ່ງຂໍ້ມູນເຂົ້າເຊີເວີ້ພົບເຫັນ",
-        "http500": "ເຊີເວີ້ສຳລັບຟອມຂອງທ່ານເຊື່ອມຕໍ່ບໍ່ໄດ້. ກະລຸນາລອງໃຫມ່ອີກຄັ້ງ ຫລື ຕິດຕໍ່ຫາ __supportEmail__."
+        "http500": "ເຊີເວີ້ສຳລັບຟອມຂອງທ່ານເຊື່ອມຕໍ່ບໍ່ໄດ້. ກະລຸນາລອງໃຫມ່ອີກຄັ້ງ ຫລື ຕິດຕໍ່ຫາ __supportEmail__.",
+        "http504": "ບໍ່ສາມາດເຊື່ອມຕໍ່ກັບເຊີເວີໄດ້"
     },
     "version": "ເວີຊັ້ນ:",
     "widget": {
