added: russian translation

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -290,6 +290,7 @@
         "pl": "Polish",
         "pt": "Portuguese",
         "ro": "Romanian",
+        "ru": "Russian",
         "sk": "Slovak",
         "supported": "Languages supported: ",
         "sv": "Swedish",
