changed: updated Russian, Dutch, Spanish

--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -290,6 +290,7 @@
         "pl": "Polaco",
         "pt": "Portugués",
         "ro": "Rumano",
+        "ru": "Ruso",
         "sk": "Eslovaco",
         "supported": "Idiomas soportados:",
         "sv": "Sueco",
