--- a/locales/nl/translation.json
+++ b/locales/nl/translation.json
@@ -290,6 +290,7 @@
         "pl": "Pools",
         "pt": "Portugees",
         "ro": "Roemeens",
+        "ru": "Russisch",
         "sk": "Slowaaks",
         "supported": "Talen ondersteund:",
         "sv": "Zweeds",
