--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -290,6 +290,7 @@
         "pl": "Польский",
         "pt": "Португальский",
         "ro": "Румынский",
+        "ru": "Русский",
         "sk": "Словацкий ",
         "supported": "Поддерживаемые языки:",
         "sv": "Шведский",
