--- a/locales/src/ru/translation.json
+++ b/locales/src/ru/translation.json
@@ -27,11 +27,9 @@
             "heading": "Тревога"
         },
         "export": {
-            "alternativequestion": "альтернативная загрузка - онлайн",
             "error": {
                 "filecreatedmsg": "Тем не менее, незавершенного экспорта файл был создан.",
                 "heading": "Ошибка экспорта",
-                "linknotcreated": "Не удалось создать ссылку экспорта для неподтвержденных записей. Вы онлайн?",
                 "msg": "Ошибки произошли во время создания файла экспорта записей для неподтвержденных  записей. Ошибки: __errors__"
             },
             "success": {
@@ -201,7 +199,7 @@
         "code": "Код ошибки: __code__",
         "dataloadfailed": "Не удалось загрузить данные из __url__",
         "econnrefused": "Не удалось подключиться к серверу",
-        "encryptionnotsupported": "Эта форма требует локального шифрования записей. К сожалению, это пока не поддерживается. Мы рекомендуем использовать ODK Collect для сбора данных с помощью этой формы.",
+        "encryptionnotsupported": "Эта форма требует локального шифрования записей. К сожалению, это не поддерживается вашим браузером. Мы рекомендуем перейти на современный браузер.",
         "instancenotfound": "Запись отсутствует. Возможно срок истек.",
         "invalidediturl": "Недействительный адрес для редактирования",
         "loadfailed": "Ошибка загрузки __resource__",
