--- a/locales/src/es/translation.json
+++ b/locales/src/es/translation.json
@@ -27,11 +27,9 @@
             "heading": "Alerta"
         },
         "export": {
-            "alternativequestion": "Descarga alternativa - online",
             "error": {
                 "filecreatedmsg": "Tranquilo, hemos creado un archivo de exportación aunque está incompleto.",
                 "heading": "Error en la exportación",
-                "linknotcreated": "No hemos podido crear un enlace para exportar los registros no enviados. ¿Tiene conexión en estos momentos?",
                 "msg": "Se han producido errores durante la creación del archivo de exportación de registros de los registros no enviados. Errores: __errors__"
             },
             "success": {
@@ -201,7 +199,7 @@
         "code": "Código de error: __code__",
         "dataloadfailed": "Se ha producido un error al cargar los datos de __url__",
         "econnrefused": "No se pudo conectar con el servidor",
-        "encryptionnotsupported": "Este formulario requiere encriptado local de registros. Desafortunadamente esto todavía no está soportado. Le recomendamos que use ODK Collect para recoger datos con este formulario.",
+        "encryptionnotsupported": "Este formulario requiere encriptamiento local de registros. Desafortunadamente su navegador actual no lo soporta. Se recomienda cambiarse a una versión más moderna de su navegador o a otro navegador.",
         "instancenotfound": "Registro no hallado. Puede haver expirado.",
         "invalidediturl": "Esta URL no es válida",
         "loadfailed": "Error al cargar __resource__",
