--- a/locales/src/es/translation.json
+++ b/locales/src/es/translation.json
@@ -17,7 +17,7 @@
         },
         "appupdated": {
             "heading": "Aplicación actualizada!",
-            "msg": "Hemos descargado una nueva versión de esta aplicación. Refresque esta página para cargar la nueva versión."
+            "msg": "Hemos descargado una nueva versión de esta aplicación. Actualice esta página para cargar la nueva versión."
         },
         "closing": {
             "heading": "Cerrando..."
@@ -39,7 +39,7 @@
         },
         "formupdated": {
             "heading": "Formulario actualizado!",
-            "msg": "Hemos descargado una nueva versión de este formulario. Refresque esta página para cargar la nueva versión."
+            "msg": "Hemos descargado una nueva versión de este formulario. Actualice esta página para cargar la nueva versión."
         },
         "gotonotfound": {
             "msg": "No se pudo encontrar la pregunta \"__path__\" en el formulario. ¿Es correcta la referencia a esta pregunta?"
@@ -52,7 +52,7 @@
             "msg2": "Por favor contacte con  __emailLink__   indicando la dirección de esta página y el mensaje de error que aparece más abajo:",
             "heading_plural": "Errores en la carga",
             "msg1_plural": "Hubo errores durante la carga de este formulario",
-            "msg2_plural": "Por favor contacte con __emailLink__ indicando la dirección de esta página y el mensaje de error que aparece más abajo:"
+            "msg2_plural": "Por favor contáctese con __emailLink__ indicando la dirección de esta página y el mensaje de error que aparece más abajo:"
         },
         "logout": {
             "heading": "Sesión cerrada.",
@@ -61,14 +61,14 @@
         "offlinesupported": {
             "heading": "El formulario funciona offline!",
             "msg": [
-                "Este formulario puede ser cargado y usado sin conexión a Internet en este dispositivo. Añádalo a sus favoritos para poder acceder facilmente offline.",
+                "Este formulario puede ser cargado y usado sin conexión a Internet en este dispositivo. Añádalo a sus favoritos para poder acceder facilmente al mismo sin una conexión.",
                 "Los registros se guardarán y encolarán automáticamente en el navegador hasta que tenga conexión a Internet. Cuando la aplicación esté online los registros se enviarán automáticamente - uno a uno.",
                 "Solo unicamente cuando un registro ha sido enviado con éxito, será eliminado de la cola. Puede cerrar con seguridad su navegador y el dispositivo con elementos en la cola. Seguirán en la cola la próxima vez que cargue el formulario."
             ]
         },
         "offlineunsupported": {
-            "heading": "Esta aplicación no se puede lanzar offline",
-            "msg": "Este navegador no permite lanzar la aplicación offline. Puede usar la encuesta sin esta característica o ver las opciones para resolver esto.",
+            "heading": "Esta aplicación no se puede ejecutar offline",
+            "msg": "Este navegador no permite ejecutar la aplicación offline. Puede usar la encuesta sin esta característica o ver las opciones para resolver esto.",
             "negButton": "Utilícelo",
             "posButton": "Mostrar opciones"
         },
@@ -80,7 +80,7 @@
             "msg": "__recordName__ cargado"
         },
         "recordnotfound": {
-            "msg": "No hemos podido recuperar el registro o bien este no contenía datos."
+            "msg": "No hemos podido recuperar el registro o bien éste no contenía datos."
         },
         "recordsavesuccess": {
             "draftmsg": "Registro guardado como borrador",
@@ -88,7 +88,7 @@
         },
         "submission": {
             "msg": "Enviando datos...",
-            "redirectmsg": "Será automaticamente redirigido después del envío"
+            "redirectmsg": "Será automáticamente redirigido después del envío"
         },
         "submissionerror": {
             "authrequiredmsg": "Es necesaria la autenticación. Por favor autentifíquese __aquí__ en una pestaña diferente del navegador y pruebe de nuevo.",
@@ -104,7 +104,7 @@
             "redirectmsg": "Ahora será redirigido."
         },
         "thanks": {
-            "heading": "Gracias por participar !",
+            "heading": "Gracias por participar!",
             "msg": "Puede cerrar esta ventana ahora.",
             "msgTaken": "Ya ha completado este formulario."
         },
@@ -122,7 +122,7 @@
     },
     "confirm": {
         "autosaveload": {
-            "heading": "Un registro sin grabar encontrado ",
+            "heading": "Un registro sin grabar encontrado",
             "msg": "Enketo ha encontrado un registro sin guardar. ¿Quiere cargar este registro o descartarlo?",
             "negButton": "Descartar",
             "posButton": "Cargar registro"
@@ -151,7 +151,7 @@
         "login": {
             "heading": "Inicio de sesión requerido",
             "msg": [
-                "Si quiere enviar los datos que están en la cola tendrá que iniciar sesión. Si quiere hacerlo ahora mismo, lo redirigemos pero perderá los datos que no haya guardado.",
+                "Si quiere enviar los datos que están en la cola tendrá que iniciar sesión. Si quiere hacerlo ahora mismo, lo redireccionaremos pero perderá los datos que no haya guardado.",
                 "¿Le gustaría iniciar sesión ahora o más tarde?"
             ],
             "negButton": "Mas tarde",
@@ -162,7 +162,7 @@
             "heading": "Seleccione configuración de impresoras",
             "landscape": "Modo paisaje",
             "letter": "Modo carta",
-            "msg": "Para preparar una impresión optimizada, por favor seleccione de entre las opciones de impresión debajo",
+            "msg": "Para preparar una impresión optimizada, por favor seleccione entre las siguientes opciones de impresión",
             "orientation": "Orientación del papel",
             "portrait": "Modo retrato",
             "posButton": "Preparar",
@@ -184,8 +184,8 @@
         "required": "Este campo es obligatorio"
     },
     "contact": {
-        "admin": "Contacte con el administrador de la encuesta por favor.",
-        "support": "Contacte con __supportEmail__ por favor."
+        "admin": "Contáctese con el administrador de la encuesta por favor.",
+        "support": "Contáctese con __supportEmail__ por favor."
     },
     "drawwidget": {
         "annotation": "archivo y dibujo",
@@ -200,7 +200,7 @@
         "dataloadfailed": "Se ha producido un error al cargar los datos de __url__",
         "econnrefused": "No se pudo conectar con el servidor",
         "encryptionnotsupported": "Este formulario requiere encriptamiento local de registros. Desafortunadamente su navegador actual no lo soporta. Se recomienda cambiarse a una versión más moderna de su navegador o a otro navegador.",
-        "instancenotfound": "Registro no hallado. Puede haver expirado.",
+        "instancenotfound": "Registro no hallado. Puede haber expirado.",
         "invalidediturl": "Esta URL no es válida",
         "loadfailed": "Error al cargar __resource__",
         "notfoundinformlist": [
@@ -263,7 +263,7 @@
     },
     "here": "aquí",
     "home": {
-        "msg": "__appTitle__ en ejecución! Por favor aceda a Enketo forms desde su instalación en  __serverName__."
+        "msg": "__appTitle__ en ejecución! Por favor acceda a Enketo forms desde su instalación en  __serverName__."
     },
     "imagemap": {
         "svgNotFound": "No se pudo encontrar la imagen SVG"
@@ -301,8 +301,8 @@
         "modernbrowsers": {
             "heading": "Navegadores modernos",
             "ie": {
-                "heading": "¿ Porqué ese poco cariño por esas endiabladamente malignas versiones de Internet Explorer ? ",
-                "msg": "Entendemos que algunas personas, especialmente aquellas que trabajan en grandes empresas o instituciones no tienen acceso a los últimos y mejores navegadores. Como sabemos como de estupenda puede ser la web con las herramientas correctas, tenemos empatía por los usuarios en esta situación. Normalmente intentaríamos buscar la manera de dar soporte a ciertos  navegadores populares. Sin embargo la razón por la que Enketo existe es por la disponibilidad de algunas tecnologías de última hora. Desafortunadamente, los usuarios de navegadores antiguos no van a tener la suerte de poder usar Enketo."
+                "heading": "¿ Porqué ese poco cariño por esas endiabladamente malignas versiones de Internet Explorer ?",
+                "msg": "Entendemos que algunas personas, especialmente aquellas que trabajan en grandes empresas o instituciones no tienen acceso a los últimos y mejores navegadores. Como sabemos como de estupenda puede ser la web con las herramientas correctas, tenemos empatía por los usuarios en esta situación. Normalmente intentaríamos buscar la manera de dar soporte a ciertos navegadores populares. Sin embargo la razón por la que Enketo existe es por la disponibilidad de algunas tecnologías de última hora. Desafortunadamente, los usuarios de navegadores antiguos no van a tener la suerte de poder usar Enketo."
             },
             "msg1": "Ay! Lo sentimos pero seguramente usted ha llegado aquí porque su navegador no está actualizado o bien es una versión antigua o quizás tiene algunas características clave para Enketo deshabilitadas porque está usando el modo de navegación de incógnito.",
             "msg2": "Si está utilizando un navegador antiguo le recomendamos que se actualize a una versión reciente de los siguientes excelentes navegadores modernos:"
@@ -331,9 +331,9 @@
     "record-list": {
         "export": "Exportar",
         "msg1": "Los registros se almacenan en su navegador hasta que estos han sido enviados al servidor (incluso aunque apague el ordenador o pierda la conexión).",
-        "msg2": "Los registros que están en la cola, excepto aquellos marcados como draft __icon__, se envían al servidor automáticamente en background, cada 5 minutos cuando la página Web está abierta y hay conexión a Internet.",
-        "msg2-nodraft": "Los registros que están en la cola, excepto aquellos marcados como draft __icon__, se envían al servidor automáticamente en background, cada 5 minutos cuando la página Web está abierta y hay conexión a Internet.",
-        "msg3": "Para forzar un envío entre intentos automáticos haga click en Enviar datos.",
+        "msg2": "Los registros que están en la cola, excepto aquellos marcados como draft __icon__, se envían al servidor automáticamente en segundo plano, cada 5 minutos cuando la página Web está abierta y hay conexión a Internet.",
+        "msg2-nodraft": "Los registros que están en la cola, excepto aquellos marcados como draft __icon__, se envían al servidor automáticamente en segundo plano, cada 5 minutos cuando la página Web está abierta y hay conexión a Internet.",
+        "msg3": "Para forzar un envío entre intentos automáticos haga clic en Enviar datos.",
         "norecords": "No quedan registros en la cola",
         "title": "Enviar a la cola",
         "upload": "Enviar datos"
@@ -351,7 +351,7 @@
     },
     "submission": {
         "http0": "Fallo (¿Sin conexión a Internet?).",
-        "http2xx": "Respuesta erronea al enviar los datos.",
+        "http2xx": "Respuesta errónea al enviar los datos.",
         "http400": "El servidor de datos no acepta datos.",
         "http401": "Ha habido un problema de autenticación con el servidor de datos.",
         "http403": "No tiene permisos para enviar datos a este servidor de datos.",
@@ -359,7 +359,7 @@
         "http408": "Servidor de datos no responde.",
         "http413": "Demasiados datos",
         "http4xx": "Error sin especificar al enviar datos al servidor.",
-        "http500": "El servidor de datos para su formulario o el servidor de Enketo están apagados o no son accesibles. Por favor pruebe de nuevo o contacte con __supportEmail__ .",
+        "http500": "El servidor de datos para su formulario o el servidor de Enketo están apagados o no son accesibles. Por favor pruebe de nuevo o contáctese con __supportEmail__ .",
         "http504": "No puede establecer conexión con el servidor de datos."
     },
     "version": "versión:",
