--- a/locales/src/de/translation.json
+++ b/locales/src/de/translation.json
@@ -27,11 +27,9 @@
             "heading": "Benachrichtigung"
         },
         "export": {
-            "alternativequestion": "Zum Download zur Verfügung - Online",
             "error": {
                 "filecreatedmsg": "Dennoch wurde eine unvollständige Exportdatei noch erstellt.",
                 "heading": "Export-Fehler",
-                "linknotcreated": "Fehler beim Erstellen eines Export-Links für nicht übertragene Datensätze. Sind Sie online?",
                 "msg": "Fehler beim Erstellen der Exportdateien für die nicht übertragenen Datensätze. Fehler: __errors__"
             },
             "success": {
@@ -201,7 +199,7 @@
         "code": "Fehlercode: __code__",
         "dataloadfailed": "Daten konnten nicht aus __url__ laden",
         "econnrefused": "Konnte nicht mit Server verbinden",
-        "encryptionnotsupported": "Dieses Formular erfordert lokale Verschlüsselung von Datensätzen. Leider wird dies noch nicht unterstützt. Wir empfehlen die Verwendung von ODK Collect für die Datensammlung mit diesem Formular.",
+        "encryptionnotsupported": "Dieses Formular erfordert eine lokale Verschlüsselung der Datensätze. Leider wird dies von Ihrem Browser nicht unterstützt. Wir empfehlen den Umstieg auf einen modernen Browser.",
         "instancenotfound": "Datensatz nicht vorhanden. Er ist wahrscheinlich abgelaufen.",
         "invalidediturl": "Keine gültige Bearbeitungs-URL",
         "loadfailed": "Fehler beim laden __resource__",
