changed: updated Russian translation

--- a/locales/src/ru/translation.json
+++ b/locales/src/ru/translation.json
@@ -177,6 +177,10 @@
             "posButton": "Сохранить и закрыть",
             "renamemsg": "Вы действительно хотите переименовать __currentName__ в __newName__?",
             "unkownerror": "При попытке сохранить данные произошла неизвестная ошибка."
+        },
+        "repeatremove": {
+            "heading": "Удалить эту группу ответов?",
+            "msg": "Это действие необратимо. Вы уверены, что хотите продолжить?"
         }
     },
     "constraint": {
