--- a/locales/src/nl/translation.json
+++ b/locales/src/nl/translation.json
@@ -169,6 +169,10 @@
             "psize": "Papier Formaat",
             "reminder": "Denk er aan om dezelfde settings te gebruiken in het print menu hierna!"
         },
+        "repeatremove": {
+            "heading": "Deze group met antwoorden verwijderen?",
+            "msg": "Deze actie is onomkeerbaar. Weet je zeker dat je verder wilt gaan?"
+        },
         "save": {
             "existingerror": "Deze record naam of ID bestaat al.",
             "hint": "Deze naam dient om makkelijk het opgeslagen bestand te kunnen vinden om het later compleet te maken.",
@@ -177,10 +181,6 @@
             "posButton": "Sla Op & Sluit",
             "renamemsg": "Weet je zeker dat je __currentName__ naar __newName__ wilt veranderen?",
             "unkownerror": "Een onbekende fout trad op tijdens het opslaan."
-        },
-        "repeatremove": {
-            "heading": "Deze group met antwoorden verwijderen?",
-            "msg": "Deze actie is onomkeerbaar. Weet je zeker dat je verder wilt gaan?"
         }
     },
     "constraint": {
@@ -300,6 +300,10 @@
         "th": "Thai",
         "vi": "Vietnamees",
         "zh": "Chinees"
+    },
+    "literacywidget": {
+        "finish": "Eind",
+        "start": "Begin"
     },
     "page": {
         "modernbrowsers": {
